[package]
name = "fqcat"
description = "Tool for rapidly merging FASTQ files. Never use cat again!"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nrminor/fqcat"
homepage = "https://github.com/nrminor/fqcat"
documentation = "https://github.com/nrminor/fqcat/blob/main/README.md"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libfqcat"
path = "src/lib.rs"

[[bin]]
name = "fqcat"
path = "src/main.rs"

[dependencies]
bio = "1.4.0"
clap = { version = "4.4.6", features = ["derive"] }
flate2 = "1.0.28"
glob = "0.3.1"
zstd = "0.13.0"
tokio = { version = "1", features = ["full"] }
async-compression = "0.4.4"
futures = "0.3.28"
seq_io = "0.3.2"

[profile.release]
lto = true
